<resources>
    <string name="app_name">LoanManagement</string>

    <!--  item_loan  -->
    <string name="loan_purpose">Asked for %s</string>
    <string name="loan_interest">%s Interest Rate</string>
    <string name="loan_term">%s Months</string>
    <string name="loan_risk">Risk: %s</string>

    <!--  Home  -->
    <string name="title_home">Available Loan List</string>

    <!--  Detail  -->
    <string name="title_detail">Loan detail</string>
    <string name="credit_score">Credit Score: %s</string>
    <string name="collateral_type">Collateral Type: %s</string>
    <string name="collateral_value">Collateral value: %s</string>
    <string name="amount_due">Amount Due: %s</string>
    <string name="btn_document_available">View Document</string>
    <string name="btn_document_unavailable">Document Unavailable</string>
    <string name="repayment_schedule">Repayment Schedule</string>
    
    <!--  BottomSheet  -->
    <string name="document_type">Type : %s</string>
    <string name="amount">Amount</string>
    <string name="term">Term</string>
    <string name="purpose">Purpose</string>
    <string name="risk">Risk</string>
</resources>