<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="16dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_borrower_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/color_text_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/tv_loan_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/color_text_primary_light"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_borrower_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_borrower_name"
            tools:text="5000000" />

        <TextView
            android:id="@+id/tv_loan_purpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/loan_purpose"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/color_text_primary_light"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_loan_amount"
            app:layout_constraintTop_toBottomOf="@+id/tv_loan_amount" />

        <TextView
            android:id="@+id/tv_loan_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/loan_interest"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@+id/tv_loan_amount"
            app:layout_constraintTop_toBottomOf="@+id/tv_loan_purpose" />

        <TextView
            android:id="@+id/tv_loan_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/loan_term"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/color_text_primary_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_loan_risk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:textColor="@color/color_text_primary_dark"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_loan_term"
            tools:text="High" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>