<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_surface"
    tools:context=".DetailActivity">

    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary"
        android:title="@string/title_detail"
        android:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:titleTextColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_borrower_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/color_text_primary_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/tv_borrower_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/tv_borrower_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_borrower_name"
        tools:text="samplename@gmail.com" />

    <TextView
        android:id="@+id/tv_credit_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/color_text_primary_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_borrower_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_borrower_email"
        tools:text="Credit Score: 980" />

    <TextView
        android:id="@+id/tv_collateral_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/tv_credit_score"
        app:layout_constraintTop_toBottomOf="@+id/tv_credit_score"
        tools:text="Collateral Type: Rolls Royce Phantom" />

    <TextView
        android:id="@+id/tv_collateral_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/tv_collateral_type"
        app:layout_constraintTop_toBottomOf="@+id/tv_collateral_type"
        tools:text="Collateral Value: 7000000000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_loan_document"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_document_button"
        android:text="@string/btn_document_available"
        android:textColor="?attr/colorOnPrimary"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintStart_toStartOf="@+id/tv_collateral_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_collateral_value"
        app:cornerRadius="8dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/repayment_schedule"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/color_text_primary"
        app:layout_constraintStart_toStartOf="@+id/btn_loan_document"
        app:layout_constraintTop_toBottomOf="@+id/btn_loan_document" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_repayment_schedule"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/item_repayment" />

</androidx.constraintlayout.widget.ConstraintLayout>